tests/NormalTests/paczka2/big_fuzzy/29633774.err
Error in line 2: eyWdy1uxp A695 72,3
Error in line 8: D6c S980 84,9
Error in line 20: eyWdy1uxp S980 61,5
Error in line 24: R4Db3nSZ0W A695 92,6
Error in line 35: 0xjqgZu23TV S980 56,7
Error in line 46: 2p3O S30 58,4
Error in line 45: sGL5p7 S30 2,3
Error in line 53: D6c A695 100,0
Error in line 52: S30 A695 104,1
Error in line 60: 2p3O S30 2,0
Error in line 61: eyWdy1uxp S980 52,1
Error in line 83: D6c S30 -1,4
Error in line 73: 2p3O S980 21,3
Error in line 85: 2p3O S30 88,7
Error in line 86: 2p3O S535 95,4
Error in line 79: D6c S30 59,5
Error in line 114: R4Db3nSZ0W S30 95,2
Error in line 121: R4Db3nSZ0W S535 63,7
Error in line 119: S30 A695 61,5
Error in line 130: 0xjqgZu23TV A695 19,4
Error in line 122: R4Db3nSZ0W S980 95,2
Error in line 135: S30 S980 215,3
Error in line 145: 2p3O A695 12,5
Error in line 151: 0xjqgZu23TV A695 28,4
Error in line 158: 0xjqgZu3TV S30 4,7
Error in line 165: 0xjqgZu23TV S980 79,7
Error in line 149: D6c S30 322,6
Error in line 161: R4Db3nSZ0W A695 39,7
Error in line 159: eyWdy1uxp S535 3,7
Error in line 193: 0xjqgZu23TV S535 59,8
Error in line 211: D6c S980 92,2
Error in line 219: 2p3O S980 68,6
Error in line 210: sGL5p7 S980 776,9
Error in line 220: 2p3O S535 5,2
Error in line 224: sGL5p7 S30 33,7
Error in line 239: eyWdy1uxp S980 123,1
